# LBMProject

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  GUO_FORCING_CODE_REFERENCE.cu  LBM_Framework_Blueprint.json  MATERIAL_DATABASE.yaml  README_DOCS.md  RUN_ALL_PHYSICS_TESTS.sh  RUN_TEST_C.sh  SESSION_HANDOFF_2026-01-10.md  add_cuda_checks.py  analyze_test_results.py  apply_critical_fixes.sh  benchmark_conduction.json  benchmark_fluid_marangoni_v2.0.json  benchmark_keyhole_phase3_v1.0.json  marangoni_cavity_velocity.csv  run_bug3_test.sh  run_fd_tests.sh  run_stability_tests.sh  test_suite_fixes.sh  timestep_convergence_analysis.py
tests/: CMakeLists.txt  STABILITY_TESTS_README.md  VOF_TEST_SUITE_SUMMARY.md  WEEK1_TEST_QUICK_REFERENCE.md  debug_advection.cu  debug_contact_angle.cu  diagnostic_force_propagation.cu  diagnostic_force_propagation_CMakeLists.txt  diagnostic_phase5_actual_run.cu  diagnostic_phase5_forces.cu  test_buoyancy_integration.cu  test_unit_converter.cpp
tests/debug/: BUG_REPORT.md  VERIFICATION_tau_fix.txt  test_bounce_back_kernel_direct.cu  test_bounce_back_simple.cu  test_buoyancy_force_check.cu  test_buoyancy_force_minimal.cu  test_collision_kernel_direct.cu  test_darcy_survival.cu  test_debug_force_kernel.cu  test_energy_balance_debug.cu  test_energy_simple.cu  test_fluidlbm_nan_debug.cu  test_force_application_detailed.cu  test_force_velocity_coupling.cu  test_force_velocity_pipeline.cu  test_macroscopic_kernel.cu  test_multiphysics_force_diagnostic.cu  test_no_boundaries.cu  test_phase5_instrumented.cu  test_tau_calculation.cu  test_unit_conversion.cu  test_vof_mass_loss_diagnostic.cu
tests/diagnostic/: CMakeLists.txt  DIAGNOSTIC_REPORT_TEMP_ANOMALY.md  DIAGNOSTIC_RESULTS.md  README.md  run_velocity_diagnostics.sh  test0_unit_conversion.cu  test1_fluid_velocity_only.cu  test2_buoyancy_force.cu  test3_darcy_damping.cu  test4_thermal_advection_coupling.cu  test5_config_flags.cu  test_marangoni_velocity_diagnosis.cu  test_melt_pool_diagnostic.cu  test_multiphysics_temp_anomaly.cu  test_temperature_anomaly.cu  test_temporal_integration_bug.cu
tests/integration/: CMakeLists.txt  CMakeLists_fast_test_snippet.txt  POISEUILLE_TEST_REPORT.md  README.md  test_darcy_stability.cu  test_evaporation_energy_balance.cu  test_force_diagnostic_integration.cu  test_gravity_driven_flow.cu  test_laser_heating.cu  test_laser_heating_fast.cu  test_laser_heating_simplified.cu  test_laser_melting.cu  test_laser_melting_convection.cu  test_laser_surface_deformation.cu  test_marangoni_flow.cu  test_marangoni_force_validation.cu  test_marangoni_force_validation_fixed.cu  test_marangoni_system.cu  test_poiseuille_flow.cu  test_poiseuille_flow_fluidlbm.cu  test_recoil_surface_depression.cu  test_static_droplet.cu  test_stefan_1d.cu  test_substrate_temperature_reduction.cu  test_thermal_fluid_coupling.cu  test_uniform_flow_fluidlbm.cu  test_visualization_timing.cu  test_vtk_output_timing.cu
tests/integration/multiphysics/: CMakeLists.txt  GENERATE_TESTS.sh  IMPLEMENTATION_REPORT.md  QUICKSTART.md  README.md  TEST_SUMMARY.md  generate_test_stubs.py  test_cfl_limiting_conservation.cu  test_cfl_limiting_effectiveness.cu  test_deterministic.cu  test_disable_marangoni.cu  test_disable_vof.cu  test_energy_conservation_full.cu  test_energy_conservation_laser_only.cu  test_energy_conservation_no_source.cu  test_extreme_gradients.cu  test_force_balance_static.cu  test_force_direction.cu  test_force_magnitude_ordering.cu  test_high_power_laser.cu  test_known_good_output.cu  test_melt_pool_dimensions.cu  test_minimal_config.cu  test_nan_detection.cu  test_phase_fluid_coupling.cu  test_rapid_solidification.cu  test_steady_state_flow.cu  test_steady_state_temperature.cu  test_subcycling_1_vs_10.cu  test_thermal_fluid_coupling.cu  test_thermal_vof_coupling.cu  test_unit_conversion_consistency.cu  test_unit_conversion_roundtrip.cu  test_vof_fluid_coupling.cu  test_vof_subcycling_convergence.cu
tests/integration/stability/: test_high_pe_stability.cu
tests/performance/: test_flux_limiter_overhead.cu  test_lbm_benchmark.cu
tests/regression/: CMakeLists.txt  README.md  test_realistic_temperature.cu  test_substrate_bc_stability.cu  test_timestep_omega_clamping.cu  test_vof_advection_bulk_cells.cu
tests/regression/materials/: test_material_database_values.cu
tests/regression/stability/: test_omega_reduction.cu
tests/unit/: test_force_initialization.cu  test_liquid_fraction_copy.cu  test_steel_material.cpp  test_substrate_bc_isolated.cu  test_vtk_liquid_fraction.cu  test_vtk_vector_io.cu
tests/unit/boundary/: test_boundary_conditions.cu  test_face_boundary_config.cu
tests/unit/collision/: test_bgk.cu
tests/unit/fluid/: test_fluid_boundaries.cu  test_fluid_comprehensive.cu  test_fluid_debug.cu  test_fluid_lbm.cu  test_guo_force.cu  test_moving_wall_bc.cu  test_no_slip_boundary.cu
tests/unit/marangoni/: README.md  (+10 more)
tests/validation/: BUG3_TEST_README.md  CMakeLists.txt  CONVERGENCE_TEST_README.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_TEST_GUIDE.md  README.md  TEST_FIXES_SUMMARY.md  VALIDATION_TEST_STATUS.md  analyze_case5_detailed.py  analyze_case5_laser_melting.py  analyze_marangoni_validation.py  analyze_temperature_comparison.py  case5_rosenthal_validation.cpp  check_temperature_profile.py  compare_with_rosenthal.py  diagnose_thermal_issues.py  diagnostic_thermal_parameters.cu  heat_source_profiles.csv  quick_vtk_analysis.sh  run_all_validation.sh  run_case5_laser_melting.sh  run_convergence_validation.sh  run_laser_melting_validation.sh  run_marangoni_validation.sh  taylor_green_results.csv  test_3d_heat_diffusion_fixed.cu  test_3d_heat_diffusion_senior.cu  test_bug3_energy_diagnostic.cu  test_cfl_stability.cu  test_config_parser.cu  test_couette_poiseuille.cu  test_couette_poiseuille_64x128_re100.cu  test_couette_poiseuille_diagnostic.cu  test_couette_poiseuille_precision.cu  test_divergence_free.cu  test_energy_budget.cu  test_energy_conservation.cu  test_energy_conservation.sh  test_energy_conservation_timestep.cu  (+50 more)
tests/visualization/: test_marangoni_benchmark.cu
(+1054 files in other folders)
